--- a/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
+++ b/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
@@ -3,12 +3,17 @@
   "texts": {
     "Menu:Home": "Trang chủ",
     "Menu:NhaSanXuats": "Nhà sản xuất",
+    "Menu:ChiTietNhaps": "Vaccine nhập",
     "Welcome": "Chào mừng bạn",
     "LongWelcomeMessage": "Chào mừng bạn đến ứng dụng. Đây là một dự án khởi nghiệp dựa trên khung ABP. Để biết thêm thông tin, hãy truy cập abp.io.",
     "Permission:VaccineCovidManagement": "Quản lý Vaccine Covid",
     "Permission:NhaSanXuats": "Nhà sản xuất",
     "Permission:NhaSanXuats.Create": "Tạo mới Nhà sản xuất",
     "Permission:NhaSanXuats.Edit": "Chỉnh sửa Nhà sản xuất",
-    "Permission:NhaSanXuats.Delete": "Xóa Nhà sản xuất"
+    "Permission:NhaSanXuats.Delete": "Xóa Nhà sản xuất",
+    "Permission:ChiTietNhaps": "Vaccine nhập",
+    "Permission:ChiTietNhaps.Create": "Tạo mới Vaccine nhập",
+    "Permission:ChiTietNhaps.Edit": "Chỉnh sửa Vaccine nhập",
+    "Permission:ChiTietNhaps.Delete": "Xóa Vaccine nhập"
   }
 }
