--- a/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
+++ b/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
@@ -4,6 +4,7 @@
     "Menu:Home": "Trang chủ",
     "Menu:NhaSanXuats": "Nhà sản xuất",
     "Menu:ChiTietNhaps": "Vaccine nhập",
+    "Menu:VaccineTonKhos": "Vaccine tồn kho", 
     "Welcome": "Chào mừng bạn",
     "LongWelcomeMessage": "Chào mừng bạn đến ứng dụng. Đây là một dự án khởi nghiệp dựa trên khung ABP. Để biết thêm thông tin, hãy truy cập abp.io.",
     "Permission:VaccineCovidManagement": "Quản lý Vaccine Covid",
@@ -14,6 +15,7 @@
     "Permission:ChiTietNhaps": "Vaccine nhập",
     "Permission:ChiTietNhaps.Create": "Tạo mới Vaccine nhập",
     "Permission:ChiTietNhaps.Edit": "Chỉnh sửa Vaccine nhập",
-    "Permission:ChiTietNhaps.Delete": "Xóa Vaccine nhập"
+    "Permission:ChiTietNhaps.Delete": "Xóa Vaccine nhập",
+    "Permission:VaccineTonKhos": "Vaccine tồn kho"
   }
 }
