--- a/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
+++ b/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
@@ -4,7 +4,7 @@
     "Menu:Home": "Trang chủ",
     "Menu:NhaSanXuats": "Nhà sản xuất",
     "Menu:ChiTietNhaps": "Vaccine nhập",
-    "Menu:VaccineTonKhos": "Vaccine tồn kho",
+    "Menu:VaccineTonKhos": "Quản lý Vaccine",
     "Menu:DonViYTes": "Đơn vị Y tế",
     "Menu:ChiTietXuats": "Vaccine xuất",
     "Welcome": "Chào mừng bạn",
@@ -18,7 +18,8 @@
     "Permission:ChiTietNhaps.Create": "Tạo mới Vaccine nhập",
     "Permission:ChiTietNhaps.Edit": "Chỉnh sửa Vaccine nhập",
     "Permission:ChiTietNhaps.Delete": "Xóa Vaccine nhập",
-    "Permission:VaccineTonKhos": "Vaccine tồn kho",
+    "Permission:VaccineTonKhos": "Quản lý Vaccine",
+    "Permission:VaccineTonKhos.Create": "Tạo mới Vaccine",
     "Permission:DonViYTes": "Đơn vị Y tế",
     "Permission:DonViYTes.Create": "Tạo mới Đơn vị Y tế",
     "Permission:DonViYTes.Edit": "Chỉnh sửa Đơn vị Y tế",
