--- a/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
+++ b/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
@@ -20,6 +20,8 @@
     "Permission:ChiTietNhaps.Delete": "Xóa Vaccine nhập",
     "Permission:VaccineTonKhos": "Quản lý Vaccine",
     "Permission:VaccineTonKhos.Create": "Tạo mới Vaccine",
+    "Permission:VaccineTonKhos.Edit": "Chỉnh sửa Vaccine",
+    "Permission:VaccineTonKhos.Delete": "Xóa Vaccine",
     "Permission:DonViYTes": "Đơn vị Y tế",
     "Permission:DonViYTes.Create": "Tạo mới Đơn vị Y tế",
     "Permission:DonViYTes.Edit": "Chỉnh sửa Đơn vị Y tế",
