update ngon ngu

--- a/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
+++ b/src/VaccineCovidManagement.Domain.Shared/Localization/VaccineCovidManagement/vi.json
@@ -3,7 +3,7 @@
   "texts": {
     "Menu:Home": "Trang chủ",
     "Menu:NhaSanXuats": "Nhà sản xuất",
-    "Menu:VaccineTonKhos": "Quản lý Vaccine",
+    "Menu:VaccineTonKhos": "Vaccine tồn kho",
     "Menu:DonViYTes": "Đơn vị Y tế",
     "Menu:ChiTietNhaps": "Vaccine nhập",
     "Menu:ChiTietXuats": "Vaccine xuất",
